--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,4 +41,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core:1.1.0"
+    implementation "com.google.code.gson:gson:2.8.5"
 }
